buying caffs and storing duration
